idea improvements